# UchastkaBor

./: README.md  pyproject.toml
apps/blog/: admin.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/common/: admin.py  models.py
apps/common/migrations/: 0001_initial.py
apps/estate/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
apps/estate/migrations/: 0001_initial.py  0002_estate_is_featured_estateagent_rating_and_more.py  0003_estate_slug.py
core/: settings.py  urls.py  utils.py
templates/: about.html  agent-single.html  agents-grid.html  base.html  blog-grid.html  blog-single.html  contact.html
templates/estate/: index.html  property-grid.html  property-single.html
templates/lesson/: index.html  style.css
