[project]
name = "uchastkabor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ckeditor",
    "django>=6.0.2",
    "django-admin>=2.0.2",
    "django-jazzmin>=3.0.4",
    "django-unfold>=0.84.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
